--- a/package.json
+++ b/package.json
@@ -12,10 +12,11 @@
   "dependencies": {
     "@reduxjs/toolkit": "^2.4.0",
     "@tinymce/tinymce-react": "^5.1.1",
-    "antd": "^5.21.3",
     "appwrite": "^16.0.2",
+    "bootstrap": "^5.3.3",
     "html-react-parser": "^5.1.18",
     "react": "^18.3.1",
+    "react-bootstrap": "^2.10.6",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.53.2",
     "react-icons": "^5.4.0",
