--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@tinymce/tinymce-react": "^5.1.1",
     "appwrite": "^16.0.2",
     "html-react-parser": "^5.1.18",
+    "moment": "^2.30.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.53.2",
